--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <title>Lucid</title>
+    <title>Quiz</title>
 </head>
 <body>
 <div id="root"></div>
